--- a/static/game.html
+++ b/static/game.html
@@ -77,6 +77,7 @@
 
             var vertical_portal2 = "";
             var portal2_last;
+			var portalDirectionLast;
 
             var errorCounter = 0;
             var errorTimes = 0;
@@ -214,6 +215,7 @@
 										}
 
 										if (destinationPortal._direction == "horizontal") {
+											console.log("hori");
 											if (destinationPortal._value > 0) {
 												this.attr({
                                                 	x: destinationPortal.x,
@@ -225,7 +227,8 @@
                                                		y: destinationPortal.y + destinationPortal.h
                                             	});
 											}
-										} else {
+										} else if (destinationPortal._direction == "vertical") {
+											console.log("vert");
 											if (destinationPortal._value > 0) {
 												this.attr({
                                               		x: destinationPortal.x - destinationPortal.w,
@@ -298,6 +301,7 @@
                             }
 
                             if (this.hit('vertical')) {
+console.log("Here VERT");
 								portalCollision._value = dx;
 								portalCollision._direction = "vertical";
                                 if (portalCollision == bluePortal) {
@@ -307,7 +311,8 @@
                                     portalCollision.addComponent("vertical_red");
                                     this._lastComponent = "vertical_red";
                                 }
-                            } else {
+                            } else if (this.hit('horizontal')) {
+console.log("Here HORIZONTAL");
 								portalCollision._value = dy;
 								portalCollision._direction = "horizontal";
                                 if (portal == bluePortal) {
@@ -415,9 +420,9 @@
 					buildWall(width - 24, 0, 20, "vertical", "active_wall");
 					buildWall(0, height - 24, 52, "horizontal", "active_wall");	
 
-					//first level
+					first level
                     buildThickWall(5, 20, 5, "inactive_wall");
-					buildThickWall(20, 15, 2, "inactive_wall");
+					buildThickWall(20, 15, 2, "active_wall");
 					buildThickWall(30, 15, 5, "inactive_wall");
 					buildThickWall(45, 15, 1, "inactive_wall");
 
@@ -619,15 +624,20 @@
                         });
 
                         var portal2_state = (vertical_portal2 ? "vertical" : "horizontal") + "_" + other_player_color;
+						//var portalDirection = vertical_portal2 ? "vertical" : "horizontal";
+						
 
 						if(portal2_last != portal2_state){
 							if(portal2_last){
 								other_portal.removeComponent(portal2_last, false);
+								//other_portal.removeComponent(portalDirectionLast, false);
 							}
 	
 							other_portal.addComponent(portal2_state);
+							//other_portal.addComponent(portalDirection);
 
 							portal2_last = portal2_state;
+							//portalDirectionLast = portalDirection;
 						}
                     }
                 }, 1000 / fps);
